--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <form action="https://enw7u145b8im9.x.pipedream.net/" method="post">
-            <h1 class="text-red">INPUT THE DETAILS </h1>
+            <h1 class="text-red">Survey Form</h1>
             <b>
                 <h3>Name:</h3>
                 <label for="First_name">First Name : </label>
