--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 <br>
                 <br>
                 <label for="Pincode">Pincode : </label>
-                <input required type="number" name="pincode" id="pincode" class="input-container">
+                <input required type="text" name="pincode" id="pincode" class="input-container" pattern="[0-9]{6}">
                 <br>
                 <br>
                 <h3>Contact:</h3>
                 <label for="Contact">Contact no. : </label>
-                <input required type="number" name="contact_number" id="contact_number" class="input-container">
+                <input required type="tel" name="contact_number" id="contact_number" class="input-container" pattern="[0-9]{10}">
                 <br>
                 <br>
                 <h3>Rating:</h3>
